refactor: 修改源代码目录结构，增加src目录

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,2 @@
-include README.md LICENSE ipywidgets_vue/*.vue
+include README.md LICENSE src/vuepy/md_codehilite.css
+include src/vuepy/js_stubs/ipywidgets_vue/*.vue src/vuepy/js_stubs/vue.js
