--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,5 +5,6 @@ include src/vuepy/cli/template_vue/*
 
 include src/ipywui/components/*.vue
 include src/ipywui/widgets/assets/css/*.css
-include src/ipywui/widgets/custom/clipboard/*.css
-include src/ipywui/widgets/custom/clipboard/*.js
+include src/ipywui/widgets/custom/clipboard/*
+include src/ipywui/widgets/custom/dialog/*
+include src/ipywui/widgets/custom/message/*
